--- a/pages/main.html
+++ b/pages/main.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>同人项目管理系统</title>
+		<title>管理系统</title>
 		<link rel="stylesheet" href="../js/bootstrap/css/bootstrap.css" />
 		<link rel="stylesheet" href="../js/plugins/bootstrap/fortawesome/css/font-awesome.css">
 		<link rel="stylesheet" href="../js/plugins/bootstrap/switch/bootstrap-switch.css" />
